<resources>
    <string name="app_name">Cocktail App</string>
    <string name="no_internet_connect">No Internet Connection</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="action_filter">Filter</string>
    <string name="alcoholic">Alcoholic</string>
    <string name="non_alcoholic">Non-Alcoholic</string>
    <string name="favourite_cocktails">Favourite Cocktails</string>
    <string name="no_favourite_cocktails_available">You don\'t have any favourite cocktails yet</string>
    <string name="no_cocktails_found">No cocktails found by selected ingredient</string>
    <string name="cocktail_poster_big">Big Cocktail Image</string>
    <string name="cocktail_image_small">Small Cocktail Image</string>
    <string name="content_authority">com.example.android.cocktailsapp</string>
    <string name="added_to_favourites">Cocktail added to favourites</string>
    <string name="removed_from_favourites">Cocktail removed from favourites</string>
    <string name="cocktail_name">Cocktail Name</string>
    <string name="cocktail_instructions">Cocktail Instructions</string>
    <string name="cocktail_ingredients">Cocktail Ingredients</string>
    <string name="action_share">Share</string>
    <string name="ingredient_name">Ingredient Name</string>
    <string name="ingredient_measurement">Ingredient Measurement</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="search_results">Search results:</string>
    <!--this is test id from https://developers.google.com/admob/android/test-ads-->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="share_cocktail_via">Share cocktail via</string>
    <string name="cocktail_share_ingredients_string">Ingredients:</string>
    <string name="cocktail_share_instructions_string">Instructions:</string>
    <string name="add_to_favorites_action_button">Add to Favorites Action Button</string>
</resources>
