<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.cocktailsapp.activities.CocktailListActivity">

    <item
        android:id="@+id/action_sort"
        android:orderInCategory="100"
        android:title="@string/action_filter"
        android:icon="@drawable/ic_sort_24dp"
        app:showAsAction="always">
        <menu>
            <group
                android:id="@+id/sort_group"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/filter_by_alcoholic"
                    android:title="@string/alcoholic" />

                <item
                    android:id="@+id/filter_by_non_alcoholic"
                    android:title="@string/non_alcoholic" />

                <item
                    android:id="@+id/favourite_cocktails"
                    android:title="@string/favourite_cocktails" />
            </group>
        </menu>
    </item>

</menu>