<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_cocktails_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/app_bar_layout" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingTop="@dimen/cocktail_details_padding_top"
        xmlns:tools="http://schemas.android.com/tools">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:id="@+id/main_cocktail_detail_layout"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:id="@+id/main_content_layout"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/cocktail_image_details"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/cocktail_poster_big"
                    android:scaleType="centerCrop" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:id="@+id/main_cocktail_header_layout"
                    android:clipChildren="false"
                    android:orientation="vertical">

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/like_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top|end"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="-40dp"
                        android:src="@drawable/ic_like_grey"
                        app:backgroundTint="@color/colorWhite"
                        android:contentDescription="@string/add_to_favorites_action_button"
                        app:borderWidth="0dp"
                        app:elevation="4dp"
                        app:layout_anchor="@+id/cocktail_name"
                        app:pressedTranslationZ="12dp"
                        app:rippleColor="@android:color/white" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/cocktail_name"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/cocktail_details_name_margins"
                        android:layout_marginBottom="@dimen/cocktail_details_name_margins"
                        android:paddingStart="@dimen/cocktail_details_name_paddings"
                        android:paddingEnd="@dimen/cocktail_details_name_paddings"
                        android:gravity="start"
                        tools:text="@string/cocktail_name"
                        android:textSize="@dimen/cocktail_details_name_text_size"
                        android:textColor="@color/primaryText"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@color/colorDividerLight"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@color/colorDividerLight"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="5dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp">

                    <android.support.v7.widget.CardView
                        xmlns:card_view="http://schemas.android.com/apk/res-auto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        card_view:cardBackgroundColor="@color/colorWhite"
                        card_view:cardCornerRadius="10dp"
                        card_view:cardElevation="5dp"
                        card_view:cardUseCompatPadding="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingTop="12dp"
                                android:paddingBottom="5dp"
                                android:text="@string/instructions"
                                android:textSize="@dimen/detail_main_text_size"
                                android:textStyle="bold"
                                android:textColor="@color/primaryText"/>

                            <View
                                android:layout_width="20dp"
                                android:layout_height="2dp"
                                android:background="@color/colorPrimary"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/instructions"
                                android:paddingTop="10dp"
                                android:paddingBottom="5dp"
                                tools:text="@string/cocktail_instructions"
                                android:textSize="@dimen/detail_main_text_size"
                                android:textColor="@color/secondaryText"/>

                        </LinearLayout>

                    </android.support.v7.widget.CardView>


                    <android.support.v7.widget.CardView
                        xmlns:card_view="http://schemas.android.com/apk/res-auto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        card_view:cardBackgroundColor="@color/colorWhite"
                        card_view:cardCornerRadius="10dp"
                        card_view:cardElevation="5dp"
                        card_view:cardUseCompatPadding="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingTop="12dp"
                                android:paddingBottom="5dp"
                                android:text="@string/ingredients"
                                android:textStyle="bold"
                                android:textSize="@dimen/detail_main_text_size"
                                android:textColor="@color/primaryText"/>

                            <View
                                android:layout_width="20dp"
                                android:layout_height="2dp"
                                android:background="@color/colorPrimary"/>

                            <android.support.v7.widget.RecyclerView
                                android:id="@+id/ingredients_list"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>

                            <!--<ListView
                                android:id="@+id/ingredients_list"
                                android:layout_width="wrap_content"
                                android:layout_height="fill_parent"
                                />-->

                        </LinearLayout>

                    </android.support.v7.widget.CardView>


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/pb_loading_indicator_details"
        android:layout_height="42dp"
        android:layout_width="42dp"
        android:layout_gravity="center"
        android:visibility="visible" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/share_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="@dimen/fab_margin"
        android:layout_marginEnd="@dimen/fab_margin"
        android:background="@drawable/add_fab_background"
        android:contentDescription="@string/action_share"
        android:src="@drawable/ic_share"
        android:elevation="@dimen/fab_elevation"
        app:pressedTranslationZ="@dimen/fab_press_translation_z"
        android:stateListAnimator="@anim/fab_state_list_animation" />

</FrameLayout>